feat: implement EntityGraph strategy and query metrics tracking for N+1 optimization - Added EntityGraph based fetching for departments, students, and courses - Introduced Hibernate query counter to benchmark database calls - Created QueryMetricsResponse to track query count and execution time - Exposed separate endpoints for performance comparison - Improved service layer to support multiple fetching strategies